// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly not pressable 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "color": "#007398",
          "fontSize": 16,
        },
        undefined,
      ],
    ]
  }
>
  Hayden Zieme
</Text>
`;

exports[`renders correctly with name 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="NameButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        null,
        Object {},
        null,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#007398",
              "fontSize": 16,
            },
            undefined,
          ],
        ]
      }
    >
      Hayden Zieme
    </Text>
  </View>
</View>
`;

exports[`renders correctly without name 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "color": "#007398",
          "fontSize": 16,
        },
        undefined,
      ],
    ]
  }
>
  MissionHub user
</Text>
`;
